<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogoutConfirmFragment"
    android:gravity="center"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@drawable/bg_logout"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/logout_konfim"
            android:gravity="center"
            android:layout_marginVertical="20dp"
            android:textStyle="bold"
            android:textSize="18dp">
            
        </TextView>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            
            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_marginHorizontal="20dp"
                android:text="@string/no"
                android:backgroundTint="@color/abu">
                
            </Button>
            
            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_marginHorizontal="20dp"
                android:text="@string/yes"
                android:backgroundTint="@color/orange">

            </Button>
            
        </LinearLayout>
        
        

    </LinearLayout>


</LinearLayout>