<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="horizontal"
    tools:context=".AccountFragment">

    <TextView
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/duwanews"
        android:textColor="@color/white"
        android:textSize="22dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginTop="60dp"
        android:background="@drawable/custom_shape"
        android:gravity="start"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:paddingTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:background="@color/blue">

            </ImageView>

            <TextView
                android:layout_width="120dp"
                android:layout_height="20dp"
                android:text="@string/nama_us"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="10dp">

            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:padding="10dp"
                android:layout_marginTop="40dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@color/orange">

                </ImageView>

                <LinearLayout
                    android:layout_width="220dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_gravity="start"
                        android:text="@string/tv_nama"
                        android:textSize="17dp">

                    </TextView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:text="@string/nama_us"
                        android:textStyle="bold"
                        android:textSize="15dp"
                        android:layout_marginTop="5dp">
                    </TextView>
                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:background="@color/orange">

                </ImageView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:padding="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@color/orange">

                </ImageView>

                <LinearLayout
                    android:layout_width="220dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_gravity="start"
                        android:text="@string/tv_email"
                        android:textSize="17dp">

                    </TextView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:text="@string/email_us"
                        android:textStyle="bold"
                        android:textSize="15dp"
                        android:layout_marginTop="5dp">
                    </TextView>
                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:background="@color/orange">

                </ImageView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:padding="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@color/orange">

                </ImageView>

                <LinearLayout
                    android:layout_width="220dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_gravity="start"
                        android:text="@string/tv_notelp"
                        android:textSize="17dp">

                    </TextView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:text="@string/notelp_us"
                        android:textStyle="bold"
                        android:textSize="15dp"
                        android:layout_marginTop="5dp">
                    </TextView>
                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:background="@color/orange">

                </ImageView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:padding="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@color/orange">

                </ImageView>

                <LinearLayout
                    android:layout_width="220dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_gravity="start"
                        android:text="@string/tv_beritafav"
                        android:textSize="17dp">

                    </TextView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:text="@string/beritafav_us"
                        android:textStyle="bold"
                        android:textSize="15dp"
                        android:layout_marginTop="5dp">
                    </TextView>
                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:background="@color/orange">

                </ImageView>

            </LinearLayout>

            <Button
                android:layout_width="180dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/logout">

            </Button>




        </LinearLayout>







    </androidx.constraintlayout.widget.ConstraintLayout>






</androidx.constraintlayout.widget.ConstraintLayout>